2020-06-24  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41824 / PR 41918

	* NEWS: Revise relevant items.

	* doc/dejagnu.texi (Invoking runtest): Add --no_keep_going option.
	* doc/runtest.1: Document --no_keep_going option.  Remove
	long-obsolete --name option.  The --name option had been removed
	from runtest before the code was imported into what became the
	current repository.

	* runtest.exp: Add option --no_keep_going to stop immediately if a
	test script aborts due to a Tcl error.  Remove vestiges of
	long-obsolete --name option.  Make --keep_going option default.

	* testsuite/runtest.main/abort.exp: Adjust tests to use
	--no_keep_going and --keep_going instead of assuming a default.

2020-06-19  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	Merge patches from Tom de Vries <tdevries <at> suse.de> and write
	ChangeLog entries.

	* testsuite/runtest.main/abort.exp: Add tests that verify handling
	of arithmetic errors (divide-by-zero) in a procedure called within
	a test script.

	* testsuite/runtest.main/abort/testsuite/abort.test/abort-dbz.exp: New file.

2020-06-18  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41824 / PR 41918

	Thanks to Tom de Vries for raising these concerns and offering the
	initial testsuite patch that led to these changes.

	* NEWS: Add item for consistent abort-on-error handling.

	* lib/framework.exp (unknown): Always link global variables.  Tidy.
	Silently propagate errors raised in autoloaded procedures and move
	the UNRESOLVED result and aborting the test run to...
	* runtest.exp (runtest): Report an UNRESOLVED result if a test
	script aborts due to a Tcl error.  Link global errorCode and
	report its value if an error occurs.  For consistency, abort the
	test run on any Tcl error in a test script instead of only when
	calling an undefined procedure.

	* testsuite/runtest.main/abort.exp: Add tests to verify handling
	of arithmetic errors (divide-by-zero) in an auto-loaded procedure